--- a/src/app/client/transactionsDashboard/reclamation/reclamation.component.css
+++ b/src/app/client/transactionsDashboard/reclamation/reclamation.component.css
@@ -1,1 +1,13 @@
 @import url('../rendez-vous/rendez-vous.component.css');
+
+.badge-warning {
+	background-color: #ffc107; /* Change to your desired color */
+  }
+
+  .badge-success {
+	background-color: #28a745; /* Change to your desired color */
+  }
+  
+  .badge-danger {
+	background-color: #dc3545; /* Change to your desired color */
+  }
