--- a/src/app/client/transactionsDashboard/create-bank-account/create-bank-account.component.html
+++ b/src/app/client/transactionsDashboard/create-bank-account/create-bank-account.component.html
@@ -22,6 +22,32 @@
       </div>
       <div class="container">
         <div class="row">
+          <div class="col-md-6" >
+          <div class="card-body p-3" >
+            <div class="row no-gutters">
+                <div class="col-md-6">
+                    <div class="card-body">
+                        <p class="mb-1 pt-2 text-bold">type</p>
+                        <h5 class="font-weight-bolder">nom client </h5>
+                        <p><strong>N° Compte : {{extractedRIB}}</strong> </p>
+                        <p><strong>Solde Compte :</strong> {{solde }} TND</p>
+                        <a class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="javascript:;">
+                            <i class="fas fa-credit-card" aria-hidden="true" (click)="GoToDepotRetrait()"></i><br>
+                            Déposer
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card-img-right flex-grow-1 bg-transparent" style="background-size: contain; background-repeat: no-repeat; background-position: center center;">
+                      <qrcode [qrdata]="bankaccountqrdata" [width]="200" [imageHeight]="200"></qrcode>
+                    </div>
+                    <div class="icon-container">
+                      <i class="bi bi-cloud-download download-icon" title="Download PDF" (click)="downloadPDF(bankAccount)"></i>
+                    </div>
+                </div>
+            </div>
+          </div>
+        </div>
           <div class="col-md-6" *ngFor="let account of accounts">
             <div class="card-body p-3">
               <div class="row no-gutters">
@@ -30,7 +56,7 @@
                     <p class="mb-1 pt-2 text-bold">{{ account.compteType }}</p>
                     <h5 class="font-weight-bolder">{{ account.clientName }}</h5>
                     <p><strong>N° Compte :</strong> {{ account.qrData }}</p>
-                    <p><strong>Solde Compte :</strong> {{ account.accountBalance }} XAF</p>
+                    <p><strong>Solde Compte :</strong> {{ account.accountBalance }}TND</p>
                     <a href="javascript:;" class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" (click)="GoToDepotRetrait()">
                       <span class="icon-text">
                         <i aria-hidden="true" class="fas fa-credit-card"></i> Déposer
