--- a/src/app/client/transactionsDashboard/transactionsdash/transactionsdash.component.html
+++ b/src/app/client/transactionsDashboard/transactionsdash/transactionsdash.component.html
@@ -44,11 +44,11 @@
                                     <div (click)="goToExtrait()"class="col-8 mx-auto text-center" style="cursor: pointer;">
                                             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                                                 <span>COMPTE COURANT </span><br>
-                                                <span >N° 60072680201</span>
+                                                <span >N° {{extractedRIB}}</span>
                                             </div>
                                             <div class="col-md-12 balance-col ">
                                                 <span style="font-size:20px"> 
-                                                    0 XAF
+                                                    {{solde}} XAF
                                                 </span>
                                             </div>              
                                     </div>                                                                
