--- a/src/app/client/transactionsDashboard/e-documents/e-documents.component.html
+++ b/src/app/client/transactionsDashboard/e-documents/e-documents.component.html
@@ -39,7 +39,7 @@
                 </table>
                 
 <!-- Button to Open the Modal -->
-                <button (click)="openModal()" class="btnopen-modal btnorange">Upload File</button>
+                <button (click)="openModal()" class="btnopen-modal btnorange">Télècharger Fichier</button>
 
                 <!-- Modal Content -->
                 <div *ngIf="showModal" class="modal">
@@ -55,7 +55,7 @@
                         multiple
                     />
 
-                    <label class="label" for="doc-name">Document Name:</label>
+                    <label class="label" for="doc-name">Nom du document:</label>
                     <input class="input-modal"
                         type="text"
                         id="doc-name"
@@ -70,7 +70,7 @@
                         placeholder="Enter document description"
                     ></textarea>
 
-                    <label class="label" for="doc-keywords">Keywords:</label>
+                    <label class="label" for="doc-keywords">Mots clés:</label>
                     <input class="input-modal"
                         type="text"
                         id="doc-keywords"
