--- a/src/app/client/transactionsDashboard/extrait/extrait.component.html
+++ b/src/app/client/transactionsDashboard/extrait/extrait.component.html
@@ -167,7 +167,7 @@
                                             <div>
                                                 <i class="fas fa-money-bill"></i>
                                                 <b> Solde</b> :
-                                                {{accountBalance}} XAF
+                                                {{accountBalance}} TND
                                             </div>
                                         </div>
                                     </div>
