--- a/src/app/client/transactionsDashboard/chat/chat.component.html
+++ b/src/app/client/transactionsDashboard/chat/chat.component.html
@@ -10,12 +10,11 @@
   </div>
   <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg">
     <app-navbar></app-navbar>
-    <div class="container mt-5">
       <div class="row">
         <div class="col-md-8 offset-md-2">
           <div class="card">
             <div class="card-header">
-              Chat Room
+              Messagerie instantanée
             </div>
             <div class="card-body">
               <div class="messages">
@@ -36,6 +35,6 @@
           </div>
         </div>
       </div>
-    </div>
+    
   </main>
 </body>
