--- a/src/app/client/transactionsDashboard/transactionsdash/transactionsdash.component.html
+++ b/src/app/client/transactionsDashboard/transactionsdash/transactionsdash.component.html
@@ -1,140 +1,127 @@
 <body class="g-sidenav-show bg-gray-100">
-    <div class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gray-100"
-        id="sidenav-main">
-      
-        <app-transaction-nav></app-transaction-nav>
+    <div class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gray-100" id="sidenav-main">
+      <app-transaction-nav></app-transaction-nav>
     </div>
     <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
-        <app-navbar></app-navbar>
-        <div class="container-fluid pt-3 bg-gray-100">
-            <div class="my-10 mx-auto max-w-7xl px-4 mt-5 mb-5">
-                <div class="row align-items-center">
-                    <div class="col-lg-6 text-center text-lg-start">
-                        <h2 class="display-4 fw-bold text-gray-800 mb-3">
-                            Bienvenue, <span class="text">{{lastName}} {{firstName}} !</span>
-                        </h2>
-                        <p class="lead text-muted">dans votre espace client où vous pouvez gérer vos comptes, effectuer des transactions et bien plus encore.</p>
-                    </div>
-                    <!-- Image Section -->
-                    <div class="col-lg-6 my-4">
-                        <ng-lottie [options]="lottieOptions" (animationCreated)="animationCreated($event)"></ng-lottie>
-                    </div>
-                    <!-- End of Image Section -->
-                </div>
+      <app-navbar></app-navbar>
+      <div class="container-fluid pt-3 bg-gray-100">
+        
+        <!-- Welcome Message Section -->
+        <div *ngIf="showWelcomeMessage" class="my-10 mx-auto max-w-7xl px-4 mt-5 mb-5">
+          <div class="row align-items-center">
+            <div class="col-lg-6 text-center text-lg-start">
+              <h2 class="display-4 fw-bold text-gray-800 mb-3">
+                Bienvenue, <span class="text">{{lastName}} {{firstName}} !</span>
+              </h2>
+              <p class="lead text-muted">dans votre espace client où vous pouvez gérer vos comptes, effectuer des transactions et bien plus encore.</p>
             </div>
-            <div id="dashContent" class="row removable">
-                <div class="col-xl-5 col-sm-6">
-                    <div class="card mb-4">
-                        <div class="card-body p-3">
-                            <div class="row">
-                                <div (click)="goToExtrait()" class="col-8 mx-auto text-center" style="cursor: pointer;">
-                                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                                        <span>COMPTE COURANT </span><br>
-                                        <span>N° {{extractedRIB}}</span>
-                                    </div>
-                                    <div class="col-md-12 balance-col ">
-                                        <span style="font-size:20px">
-                                            {{solde}} TND
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card mb-4">
-                        <div class="card-body p-3">
-                            <div class="row">
-                                <div class="col-8">
-                                    <div class="numbers">
-                                        <p class="text-sm mb-0 text-capitalize font-weight-bold">Vous n'avez pas encore
-                                            de cartes</p>
-                                        <h5 class="font-weight-bolder mb-0">
-                                            <span class="text-success text-sm font-weight-bolder">+5%</span>
-                                        </h5>
-                                    </div>
-                                </div>
-                                <div class="col-4 text-end">
-                                    <div
-                                        class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
-                                        <i class="fa fa-plus text-lg opacity-10" aria-hidden="true"
-                                            style="cursor:  pointer;"></i>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="card mb-4">
-                        <div class="overflow-hidden position-relative border-radius-lg bg-cover h-100"
-                            style="background-image: url('../assets/img/ivancik.jpeg');">
-                            <span class="mask bg-gradient-dark"></span>
-                            <div class="card-body position-relative z-index-1 d-flex flex-column h-100 p-3">
-                                <h5 class="text-white font-weight-bolder mb-4 pt-2">MISE À DISPOSITION DIGITALE</h5>
-                                <p class="text-white">METTEZ A DISPOSITION DES FONDS POUR UNE TIERCE PERSONNE DEPUIS
-                                    VOTRE TÉLÉPHONE SANS VOUS DÉPLACER.</p>
-                                <p class="text-white text-sm font-weight-bold mb-0 icon-move-right mt-auto"
-                                    href="javascript:;">
-                                    De 5.000 FCFA À 5.000 FCFA <br>
-                                    <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
-                                    FRAIS :1% HT PLAFONNÉS À 15.000 FCFA
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-7 col-md-6">
-                    <div class="card mb-4">
-                        <div class="card-header pb-0">
-                            <div class="row">
-                                <div class="col-8">
-                                    <h6>Contacts</h6>
-                                    <p class="text-sm mb-0">
-                                        <span class="font-weight-bold ms-1">Vous n'avez pas encore de bénéficiaires à
-                                            afficher.<br> Ajoutez-en .</span>
-                                    </p>
-                                </div>
-                                <div class="col-4 text-end">
-                                    <div (click)="GoToContacts()"
-                                        class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
-                                        <i class="fa fa-plus text-lg opacity-10" aria-hidden="true"
-                                            style="cursor:  pointer;"></i>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                        <div class="card-body px-4 pb-2">
-                            <div class="row">
-                                <h6>Factures et Paiements</h6>
-                                <p class="text-sm mb-0">
-                                    <span class="font-weight-bold ms-1">Vous n'avez pas encore désigné des services
-                                        <br>auxquels effectuer des paiements</span>
-                                </p>
-                            </div>
-                            <div class="row">
-                                <h6>Activités</h6>
-                                <p class="text-sm mb-0">
-                                    <span class="font-weight-bold ms-1"></span>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+            <!-- Image Section -->
+            <div class="col-lg-6 my-4">
+              <ng-lottie [options]="lottieOptions" (animationCreated)="animationCreated($event)"></ng-lottie>
             </div>
-            <div class="row mb-4 removable">
-                <div class="col-lg-5">
-                    <div class="card mb-4">
-
-                    </div>
-                </div>
-                <div class="col-lg-7">
-                    <div class="card mb-4">
-                    </div>
-                </div>
-            </div>
+            <!-- End of Image Section -->
+          </div>
         </div>
+        <!-- End of Welcome Message Section -->
+        
+        <div id="dashContent" class="row removable">
+          <div class="col-xl-5 col-sm-6">
+            <div class="card mb-4">
+              <div class="card-body p-3">
+                <div class="row">
+                  <div (click)="goToExtrait()" class="col-8 mx-auto text-center" style="cursor: pointer;">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                      <span>COMPTE COURANT </span><br>
+                      <span>N° {{extractedRIB}}</span>
+                    </div>
+                    <div class="col-md-12 balance-col ">
+                      <span style="font-size:20px">
+                        {{solde}} TND
+                      </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card mb-4">
+              <div class="card-body p-3">
+                <div class="row">
+                  <div class="col-8">
+                    <div class="numbers">
+                      <p class="text-sm mb-0 text-capitalize font-weight-bold">Vous n'avez pas encore de cartes</p>
+                      <h5 class="font-weight-bolder mb-0">
+                        <span class="text-success text-sm font-weight-bolder">+5%</span>
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="col-4 text-end">
+                    <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+                      <i class="fa fa-plus text-lg opacity-10" aria-hidden="true" style="cursor:  pointer;"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card mb-4">
+              <div class="overflow-hidden position-relative border-radius-lg bg-cover h-100" style="background-image: url('../assets/img/ivancik.jpeg');">
+                <span class="mask bg-gradient-dark"></span>
+                <div class="card-body position-relative z-index-1 d-flex flex-column h-100 p-3">
+                  <h5 class="text-white font-weight-bolder mb-4 pt-2">MISE À DISPOSITION DIGITALE</h5>
+                  <p class="text-white">METTEZ A DISPOSITION DES FONDS POUR UNE TIERCE PERSONNE DEPUIS VOTRE TÉLÉPHONE SANS VOUS DÉPLACER.</p>
+                  <p class="text-white text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="javascript:;">
+                    De 5.000 FCFA À 5.000 FCFA <br>
+                    <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
+                    FRAIS :1% HT PLAFONNÉS À 15.000 FCFA
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-7 col-md-6">
+            <div class="card mb-4">
+              <div class="card-header pb-0">
+                <div class="row">
+                  <div class="col-8">
+                    <h6>Contacts</h6>
+                    <p class="text-sm mb-0">
+                      <span class="font-weight-bold ms-1">Vous n'avez pas encore de bénéficiaires à afficher.<br> Ajoutez-en .</span>
+                    </p>
+                  </div>
+                  <div class="col-4 text-end">
+                    <div (click)="GoToContacts()" class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+                      <i class="fa fa-plus text-lg opacity-10" aria-hidden="true" style="cursor:  pointer;"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card-body px-4 pb-2">
+                <div class="row">
+                  <h6>Factures et Paiements</h6>
+                  <p class="text-sm mb-0">
+                    <span class="font-weight-bold ms-1">Vous n'avez pas encore désigné des services <br>auxquels effectuer des paiements</span>
+                  </p>
+                </div>
+                <div class="row">
+                  <h6>Activités</h6>
+                  <p class="text-sm mb-0">
+                    <span class="font-weight-bold ms-1"></span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-4 removable">
+          <div class="col-lg-5">
+            <div class="card mb-4">
+            </div>
+          </div>
+          <div class="col-lg-7">
+            <div class="card mb-4">
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
-
-</body>
+  </body>
+  
