--- a/src/app/client/dashboard/demande-carte/demande-carte.component.html
+++ b/src/app/client/dashboard/demande-carte/demande-carte.component.html
@@ -125,7 +125,7 @@
                               <div class="form-group">
                                 <div class="signin-control-field">
                                   <label class="col-form-label creation-label">
-                                    Frais TTC (TND)
+                                    Frais TTC (XAF)
                                   </label>
                                   <input
                                     type="text"
