--- a/src/app/client/transactionsDashboard/e-documents/e-documents.component.html
+++ b/src/app/client/transactionsDashboard/e-documents/e-documents.component.html
@@ -12,15 +12,15 @@
         <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
             <app-navbar></app-navbar>
             <div class="container">
-                <input class="search" type="text" [(ngModel)]="searchText" placeholder="Search documents">
+                <input class="search" type="text" [(ngModel)]="searchText" placeholder="chercher un document">
                 
                 <table class="table">
                   <thead>
                     <tr>
                       <th>Logo</th>
-                      <th>Document Name</th>
+                      <th>Nom du document</th>
                       <th>Description</th>
-                      <th>Key Words</th>
+                      <th>Mot clès</th>
                       <th>Action</th>
                     </tr>
                   </thead>
