--- a/src/app/client/transactionsDashboard/my-contacts/my-contacts-add/my-contacts-add.component.html
+++ b/src/app/client/transactionsDashboard/my-contacts/my-contacts-add/my-contacts-add.component.html
@@ -19,38 +19,36 @@
             <section class="multi_step_form card-body">  
               <form id="msform"> 
                 <div class="tittle">
-                  <h2>Add Contact</h2>
-                  <p>In order to use this service, you have to complete this verification process</p>
+                  <h2>Ajouter Contact</h2>
                 </div>
                 <ul id="progressbar">
-                  <li class="active">Account Information</li>  
-                  <li>Contact Information</li> 
+                  <li class="active">Information du Compte </li>  
+                  <li>Information du Contact </li> 
                   <li>Validation</li>
                 </ul>
 
                 <fieldset>
-                  <h3>Enter below your contact's informations</h3>
                   <div *ngFor="let card of accountCards; let i = index" class="card" style="background-color: #f5f5f5; padding: 15px; border-radius: 10px;">
                     <i class="bi bi-x-circle icon-close" (click)="deleteCard(i)"></i> 
                     <div class="form-group f1">
-                      <label>Type of Account:</label>
+                      <label>Type du Compte:</label>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="accountType{{i}}" id="accountDigiBank{{i}}" [(ngModel)]="card.accountType" value="DigiBank">
+                        <input class="form-check-input" type="radio" name="accountType{{i}}" id="accountDigiBank{{i}}" value="DigiBank">
                         <label class="form-check-label" for="accountDigiBank{{i}}">DigiBank</label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="accountType{{i}}" id="accountOtherBank{{i}}" [(ngModel)]="card.accountType" value="OtherBank">
-                        <label class="form-check-label" for="accountOtherBank{{i}}">Other Bank</label>
+                        <input class="form-check-input" type="radio" name="accountType{{i}}" id="accountOtherBank{{i}}"  value="OtherBank">
+                        <label class="form-check-label" for="accountOtherBank{{i}}">Autre Banque</label>
                       </div>
                     </div>
                     <div class="form-row form-card">
                       <div class="form-group col-md-6">
                         <label>RIB:</label>
-                        <input type="text" class="form-control" [(ngModel)]="card.rib" placeholder="Enter RIB">
+                        <input type="text" class="form-control" placeholder="Enter RIB">
                       </div>
                       <div class="form-group col-md-6">
                         <label>Account Label:</label>
-                        <input type="text" class="form-control" [(ngModel)]="card.accountLabel" placeholder="Account Label">
+                        <input type="text" class="form-control"  placeholder="Account Label">
                       </div>
                     </div>
                     <div class="form-group">
@@ -60,7 +58,7 @@
                 
                   <div [style.display]="scannerEnabled ? 'block' : 'none'">
                     <ngx-scanner-qrcode #scanner (data)="onScanResult($event)"></ngx-scanner-qrcode>
-                    <p *ngIf="scanner.isLoading">⌛ Loading...</p>
+                    <p *ngIf="scanner.isLoading">⌛ Chargement...</p>
                   </div>
                 
                   <div class="form-group">
@@ -71,7 +69,7 @@
                 </fieldset>
 
                 <fieldset>
-                  <h3>Add Contact Information</h3>
+                  <h3>Ajouter les informations du contact</h3>
                   <h6>Please upload any of these documents to verify their identity.</h6>
                   <div class="row">
                     <div class="form-group col-md-6">
@@ -97,7 +95,7 @@
                     
                     <div class="form-group col-md-6">
                       <label for="category">Category</label>
-                      <input type="text" class="form-control" id="category" [(ngModel)]="category" placeholder="Enter category (e.g., Family)">
+                      <input type="text" class="form-control" id="category" [(ngModel)]="categorie" placeholder="Enter category (e.g., Family)">
                     </div>
                   </div>
                   <div class="form-group col-md-6">
