--- a/src/app/client/transactionsDashboard/my-contacts/my-contacts.component.html
+++ b/src/app/client/transactionsDashboard/my-contacts/my-contacts.component.html
@@ -15,7 +15,7 @@
     <app-navbar></app-navbar>
     <div class="container">
       <div class="input-with-icon"> 
-        <input class="search" type="text" [(ngModel)]="searchText" placeholder="Search contacts" />
+        <input class="search" type="text" [(ngModel)]="searchText" placeholder="Chercher un contact" />
         <i class="bi bi-search search-icon"></i> 
         <button class="add-contact-container" (click)="addContact()" class="btn btn-primary btnorange">Ajouter
           Contact</button>
@@ -28,12 +28,10 @@
                 <table class="table align-items-center mb-0">
                   <thead>
                     <tr>
-                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Full Name
-                      </th>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Nom Complet             </th>
                       <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">RIB
                       </th>
-                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Type
-                        de Compte</th>
+                    
                     </tr>
                   </thead>
                   <tbody>
@@ -43,7 +41,7 @@
                         <div class="d-flex px-2 py-1">
                           <div>
                            
-                            <img [src]="contact.imageContact" class="avatar avatar-sm me-3" alt="user">
+                            <img [src]="'assets/img/avatars/' + contact.imageContact" class="avatar avatar-sm me-3" alt="user">
                           </div>
                           <div class="d-flex flex-column justify-content-center">
                             <h6 class="mb-0 text-sm">{{ contact.fullName }}</h6>
@@ -54,13 +52,10 @@
                       </td>
                       <td>
                       
-                        <p class="text-xs font-weight-bold mb-0">{{ contact.gender }}</p>
                      
-                        <p class="text-xs text-secondary mb-0">{{ contact.categorie }}</p>
-                      </td>
-                      <td class="align-middle text-center text-sm">
-               
+                        <p class="text-xs text-secondary mb-0">{{ contact.rib }}</p>
                         <span class="badge badge-sm bg-gradient-success">{{ contact.accountType }}</span>
+
                       </td>
                     </tr>
 
