depot and contact add + translationh

--- a/src/app/client/transactionsDashboard/depot-rerait/depot/depot.component.html
+++ b/src/app/client/transactionsDashboard/depot-rerait/depot/depot.component.html
@@ -16,7 +16,7 @@
           <div class="col-md-8">
             <div class="card">
               <div class="card-header">
-                Comment souhaitez-vous faire votre dépôt ?
+                Comment souhaitez-vous faire  votre dépôt ?
               </div>
               <div class="card-body">
                 <form (ngSubmit)="onSubmit()">
@@ -52,7 +52,7 @@
                       </div>
                     </div>
                       <label class="col-form-label col-form-para-card">
-                        Saisissez le montant à déposer
+                        Saisissez le montant à déposer...
                       </label>
                       <div class="col-6">
                         <input type="number" class="form-control" [(ngModel)]="deposit.montant" name="montant" required>
